--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Amazing Animals</title>
+    <title>A tiger</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Amazing Animals</h1>
+    <h1>A cool tiger</h1>
     <img src="https://images.unsplash.com/photo-1456926631375-92c8ce872def?w=400" alt="Lion">
-    <p>Lions are called the king of the jungle. They live in groups called prides.</p>
-    <p>Elephants are the largest land animals. They have amazing memories!</p>
-    <p>Dolphins are very smart and love to play in the ocean waves.</p>
-    <p>Penguins can't fly but they are excellent swimmers in cold waters.</p>
 </body>
 </html>
