--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <title>Tiger Page</title>
 </head>
 <body>
-    <h1>A cool tiger</h1>
-    <img src="https://images.unsplash.com/photo-1456926631375-92c8ce872def?w=400" alt="Lion">
+    <h1>Tigers</h1>
+    <img src="https://images.unsplash.com/photo-1456926631375-92c8ce872def?w=800" alt="Tiger">
+    <p>Fearless</p>
 </body>
 </html>
